codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__question_turn_end_tests__question_turn_end_escaped_shell_command.snap
---
source: tui/src/chatwidget/tests/question_turn_end_tests.rs
assertion_line: 50
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
› \!echo partial

  > Which way?

  answer

  GPT-5.6-Sol default · /tmp/project
