codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__question_turn_end_tests__question_turn_end_keeps_history_search.snap
---
source: tui/src/chatwidget/tests/question_turn_end_tests.rs
assertion_line: 191
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
› earlier prompt

  reverse-i-search: e  enter accept · esc cancel
